# templus

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yaml
benchmarks/: CMakeLists.txt  compare.cpp
include/: hoge.h
lib/: CMakeLists.txt  Common.cpp
lib/Sub/: hoge.cpp
tools/exe/: CMakeLists.txt  exe.cpp
unittests/: CMakeLists.txt  CommonTest.cpp
unittests/Sub/: CMakeLists.txt  SubTest.cpp
